--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,20 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.11",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/styles": "^4.11.4",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.1",
+    "@mui/styles": "^5.2.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "classnames": "^2.3.1",
     "graphql": "^15.5.3",
+    "install": "^0.13.0",
     "node-sass": "^6.0.1",
+    "npm": "^8.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
